<resources>
    <string name="app_name">HelloWord</string>
    <string name="hello_the_fucking_world">Hello The Fucking World!</string>
    <string name="user">用户名:</string>
    <string name="password">密码:</string>
    <string name="signIn">登录</string>
    <string name="signUp">注册</string>
    <string name="photo">Photo</string>
    <string name="userHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="admin">管理员</string>
    <string name="commonUser">普通用户</string>
    <string name="remember">记住密码</string>
</resources>
