<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:srcCompat="@drawable/photo"
                android:contentDescription="@string/photo">

            </ImageView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF">

            </TextView>

            <EditText
            android:id="@+id/et_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_1"
            android:textSize="25sp"
            android:hint="@string/userHint"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:layout_toEndOf="@+id/tv_1"
            android:autofillHints="@string/user"
            android:inputType="text"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:maxLines="1">

            </EditText>

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:layout_below="@+id/tv_1"
                android:textColor="#FFFFFF">

            </TextView>

            <EditText
                android:id="@+id/et_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_1"
                android:layout_below="@id/et_1"
                android:textSize="25sp"
                android:hint="@string/passwordHint"
                android:autofillHints="@string/user"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:inputType="textPassword"
                android:layout_toEndOf="@+id/tv_1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:maxLines="1">

            </EditText>

        </RelativeLayout>

        <CheckBox
            android:id="@+id/cb_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:textSize="25sp"
            android:textColor="#00B8D4"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp">

        </CheckBox>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/btn1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/signIn"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:gravity="center"
                android:background="#2196F3"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp">

            </Button>

            <Button
                android:id="@+id/btn2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="#009688"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp">

            </Button>

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/rg_1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commonUser"
                android:checked="true"
                android:textSize="25sp"
                android:textColor="#304FFE">

            </RadioButton>

            <RadioButton
                android:id="@+id/rb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textSize="25sp"
                android:textColor="#D50000">

            </RadioButton>

        </RadioGroup>

</LinearLayout>